[package]
name = "dockermon-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to stream real-time CPU/memory stats of running Docker containers."
license = "MIT"
authors = ["Myroslav Mokhammad Abdeljawwad <myroslav@example.com>"]
repository = "https://github.com/myroslav/dockermon-cli"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bollard = { version = "0.15", default-features = false, features = ["tls"] }
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"